z-index fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body:fullscreen, body:-webkit-full-screen, body:-moz-full-scree {
     max-height: 80px;
     overflow: hidden;
     padding:  20px 0 10px 0;
+    z-index: 0;
     
 }
 
@@ -165,6 +166,7 @@ body:fullscreen, body:-webkit-full-screen, body:-moz-full-scree {
     padding: 1px 0 0 1px;
     font-size: 1.2em;
     border-radius: 3px;
+    z-index: 1;
 }
 
 .element-tile:hover {
@@ -602,7 +604,7 @@ body:fullscreen, body:-webkit-full-screen, body:-moz-full-scree {
     grid-template-rows: repeat(7, 33px) 4px 33px 33px;
     grid-template-columns: repeat(18, 35px);
     grid-gap: 0.35em;
-    padding: 2px 7px 5px 7px;;
+    padding: 2px 7px 5px 3px;
     border-radius: 5px;
     }
     .score-area > p {
